Mucho codigo: >> - Ajustando graficos para funcionarem >> - Mudando modelo relacional para se aderquar a regra de negócio >> - Criando inserções de alarmes no banco >> - Ajustando consultas para se adequar a linguagem do Mysql >> - Mudando conexão com banco de dados para Mysql >> - Removendo leitura de Temperatura pois não funciona mais

--- a/software/dotControllTec/pom.xml
+++ b/software/dotControllTec/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.3.1</version>
         </dependency>
+
+      <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.10.0</version>
+        </dependency>
+
         
         <!-- SQL Server -->
         <dependency>
@@ -59,6 +66,13 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20201115</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
         </dependency>
 <dependency>
     <groupId>com.googlecode.json-simple</groupId>
