--- a/Sites/Dashboard_new/package.json
+++ b/Sites/Dashboard_new/package.json
@@ -8,13 +8,14 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
-    "express": "^4.16.4",
+    "express": "^4.18.2",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "^1.9.1",
     "mssql": "^5.1.0",
-    "mysql2": "^2.2.5",
+    "mysql2": "^2.3.3",
     "sequelize": "^5.22.3",
+    "sqlite3": "^5.1.6",
     "tedious": "^6.7.0"
   }
 }
